# Artemiy_hw_27

Artemiy_hw_27/: db.sqlite3  manage.py  pyproject.toml
Artemiy_hw_27/Artemiy_hw_27/: asgi.py  settings.py  urls.py  wsgi.py
Artemiy_hw_27/ads/: models.py  views.py
Artemiy_hw_27/ads/migrations/: 0001_initial.py  0002_alter_ad_id_alter_category_id.py  0003_alter_ad_id.py  0004_alter_ad_id.py  0005_alter_category_id.py
Artemiy_hw_27/fixtures/: ads.json  categories.json
